[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/dialogue_handler/scripts/dialogue-handler.gd" type="Script" id=1]
[ext_resource path="res://ui/dialogue_handler/prefabs/dialogue_box/DialogueBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/dialogue_handler/prefabs/dialogue_response/DialogueResponse.tscn" type="PackedScene" id=3]

[node name="DialogueHandler" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="DialogueBoxTop" parent="." instance=ExtResource( 2 )]
_character_display_speed = 0.025

[node name="DialogueResponseTop" parent="." instance=ExtResource( 3 )]
visible = false
box_alignment = "top"
portrait_alignment = "left"
_button_spacing = 4

[node name="DialogueBoxBot" parent="." instance=ExtResource( 2 )]
margin_top = 690.707
margin_bottom = 1050.71
_character_display_speed = 0.025

[node name="DialogueResponseBot" parent="." instance=ExtResource( 3 )]
visible = false
margin_top = 691.063
margin_bottom = 1051.06
box_alignment = "top"
portrait_alignment = "left"
_button_spacing = 4

[connection signal="dialogue_finished" from="DialogueBoxTop" to="." method="_on_DialogueBox_dialogue_finished"]
[connection signal="response_selected" from="DialogueResponseTop" to="." method="_on_DialogueResponse_response_selected"]
[connection signal="dialogue_finished" from="DialogueBoxBot" to="." method="_on_DialogueBox_dialogue_finished"]
[connection signal="response_selected" from="DialogueResponseBot" to="." method="_on_DialogueResponse_response_selected"]
